Web audio on iOS again. Fix for volume control.

--- a/Chavah.NetCore/wwwroot/css/app/footer.less
+++ b/Chavah.NetCore/wwwroot/css/app/footer.less
@@ -138,11 +138,12 @@
         position: absolute;
         top: -135px;
         right: 21px;
-        writing-mode: vertical-lr;
+        writing-mode: vertical-rl;
         -webkit-appearance: none; // override the default appearance
         margin: @thumb-height/2 0;
         width: @track-width;
         background-color: transparent;
+        transform: rotate(180deg);
 
         &:focus {
             outline: none;
